@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST pwsafe-0.95BETA-src.tgz 13701798 SHA256 f0b081bc358fee97fce20f352e360960d2813989023b837102b90ba6ed787d46 SHA512 b8926ccb237db17eea5ec3553ddac17d84e6f021b4b600d0f091e467bcbbb8a67bc5d71efa375295c2d66cc6aa6db64d71b64a4d438118ee419e48f5edb2553c WHIRLPOOL 40cff41801c3d15580991013df837f5d1e2f49604148fd054e51e9dfb2d0bba22f10f61f4d4f21bd2d25a3d8db5645e7feaea89fc56445d5f3148efa0f86232f
+DIST pwsafe-0.95.1BETA-src.tgz 13689095 SHA256 5d16665dd540e94b4d3759528ac7ee4e668ff700a7b6ea44f30279530b71f023 SHA512 2434512dab4f69d445ce7c4b2855d0c06886d32935bfafb81c9a18cd1467b01f294eba138689b984e3bf02cb24d0a97dfe8bcfb7036f014b1f305498d69fa8f3 WHIRLPOOL ce4c5333b3fa5c1d890b615f198b8c7fc8cde6875f33e2f2b4a7d777741623804242e95bbf80eb078dfe15693303f54688f73a07c02f5500a7d0db72ea846aa8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUtVzWXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU2cQsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
-MDAwMDAwMDAwMDAwMDAwAAoJEC8E4x8HIB59RaMP/j464jd2DggoAPXX5LO+NZK9
-SsRh3MkW0nAk2soidij3k4NeoNw6Dei9RLN/IUdUdFErYRiCAVsl1iOEG1bB6vWi
-Xoo1FzaWaEq24vBkg3Kih+bZ7nJ1na42JD40NFmo6ZNUvR19h94LURfB0cFGe276
-JIfAPkvkw7qoLRvhf3eRKP43uwhi+YE+v1egvmAjZ/prp1zbDHThRoXpB4BHi6rv
-sItt+qlXwkazfWZsVC16Jk2r3c7UhUCO1cVDEAHrQIwSLNvTYaCCSLNMELCb+HhB
-0a+K7ROrX2FPKRKMISx1hP9bxvQVEMR6rgZDylTtTX/VgHv9uSoBMpNSHJMpMc4l
-3dGnthPHyK14Ijbp4w5f4h19HKw88oMkG6q2cSgG4z90bcBkzcpRBJmIacbT1Wbh
-EzXKARPNlW4Kx2Qd/iNoGtr5MOxShcsRs+I4TQjcLFbKrDxYlOlwzGEJ7Zyzkr2S
-eWGbE5O+uKtIKO5T09fnbFfYW+6lzEUNLUqvlWXf7hPsaxKshGIUHWB6vEUZe9o3
-8kBlSHOKaWvBenqiaHNl4lsOiG6CgE76b5DFRvtlFS9fQa8Tx/wetSAtN4URVTy4
-0JzZLgnIvrmZDK9djPzFoYjp40naPpMZZR4QNwkUJ6HWGNqXwjJ1XLZKdsRJ65c0
-2SodyOl8UcGpMSimCEFJ
-=vI6u
+MDAwMDAwMDAwMDAwMDAwAAoJEC8E4x8HIB59rysP+wWNa37B9wEx5sA6RJv0cU5U
+jqSB04o+uqTqBYSjeazSxEy2Z23Rs5TDk0ey4iN8PkY8WAmF7hXoBujFZgQAXX1B
+JKuTaxzTwmo1mTN78H0xYKWdbs1QPPVKCQmd/Xstt3FWltmr3GtUDCgia7OybLMN
+5O3jZvaYjHnehrpcB01I3YFfex3njbZwl326683pujPY5v05Yn83sc1inCs++RQH
+IgSxr2ueLpufFaETB0TSHgmUtVv1wOd4ChPsgsfOtDMfJS5ffnSZT0TFJqMz/hRV
+m3prwtfv2hD1w2r6Xw7mBXsFdxknoILyT+FuRN10ia1WjOxVIBRBf7L3eSGwfQYb
+6q0g6s+zFRrUQmxrZnRxmjkmP2cbyL4Wpe04vtMGXHaRM//s33USKn9/fyJyo7La
+UHg5si7QHzEmQJKoVy32q8k0J+1cgMiEul27fE561M7lIp5+KOkHhYDOqh2WWjxs
+ZVCkXjHJahyM/iRvZFspLJL7/LiNbucgp7MOSlBI8QIow8rn1JDONGfg7l1S0qMY
+DrZtjGmKNx2vJJnglY5zMTaNLbM/aa22+YBtLY+m+N0UZ9IVZH9mHHTywOQLcp+x
+znkEwlmCwWyv+yq/c+P0AX8anhA6aUg3CZsAic/e5fcUwbjjFOf8jzwuD8sLgIK9
+XwfQSw/TaYtmf/RcXPGD
+=m9gy
 -----END PGP SIGNATURE-----
